# CLIR

./: .gitignore  Cargo.toml  LICENSE.md  README.md
cli-toolkit/: Cargo.toml
cli-toolkit-derive/: Cargo.toml
cli-toolkit-derive/src/: from_byte_stream.rs  lib.rs  metadata_table.rs
cli-toolkit/src/: lib.rs
cli-toolkit/src/raw/: assembly.rs  byte_stream.rs  mod.rs  portable_executable.rs
cli-toolkit/src/raw/metadata/: header.rs  heaps.rs  indices.rs  mod.rs  tables.rs
cli-toolkit/src/read/: assembly.rs  context.rs  mod.rs  reader.rs  types.rs
cli-toolkit/src/schema/: assembly.rs  context.rs  mod.rs  types.rs
cli-toolkit/src/utilities/: mod.rs
src/: assembly.rs  lib.rs  metadata.rs  portable_executable.rs  tables.rs
src/raw/: byte_stream.rs  portable_executable.rs
src/raw/metadata/: heaps.rs  indices.rs  mod.rs  table_macros.rs  tables.rs
