[package]
name = "cli-toolkit"
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
categories = ["parsing"]
keywords = ["parser", "parsing"]
exclude = [".gitignore", "rustfmt.toml"]
repository = "https://github.com/MaximumOverflow/cli-toolkit"
description = "An experimental Rust library for interfacing with Microsoft's CLI assembly format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
read = []

[[bin]]
name = "cli-toolkit"
required-features = ["read"]

[dependencies]
uuid = "1.2.2"
indoc = "1.0.8"
paste = "1.0.11"
bitvec = "1.0.1"
derivative = "2.2.0"
lazy_static = "1.4.0"
strum = { version = "0.24", features = ["derive"] }
cli-toolkit-derive = { path = "../cli-toolkit-derive" }